fixing slight spacing issue for LG selectability

--- a/public/css/newsmax.scss
+++ b/public/css/newsmax.scss
@@ -130,7 +130,7 @@ img#logo {
   width: 325px;
   
   #subMenuHeightConstraint{
-      height: 540px;
+      height: 526px;
       overflow: hidden;
       position: relative;
   }
