--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1530,7 +1530,7 @@ img#logo {
   padding-top: 80px;
   width: 325px; }
   #subMenuHolder #subMenuHeightConstraint {
-    height: 540px;
+    height: 526px;
     overflow: hidden;
     position: relative; }
 
